objects/ssot__HealthScoreCategory__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CategoryName__c</fullName>
        <label>Category Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IconUrl__c</fullName>
        <label>Icon Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Health Score Category Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__ParentCategoryId__c</fullName>
        <label>Parent Category</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716721969366_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthScoreCategory_ParentCategoryId_rel</label>
        <referenceTo>ssot__HealthScoreCategory__dlm</referenceTo>
        <relationshipLabel>HealthScoreCategory_ParentCategoryId_rel</relationshipLabel>
        <relationshipName>rel_1716721969366_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>